# kwin_wacom

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  device.c  main.c  main.h  wacom
